Library/Items: Refactor getSockets method

--- a/application/css/default.css
+++ b/application/css/default.css
@@ -517,27 +517,30 @@ input[type="radio"] {
 .gem14 {color: #fff !important}
 
 /* Sockets */
-.socket-meta         { padding-left: 20px; background: url(../images/misc/socket_meta.gif) no-repeat left center; }
-.socket-red          { padding-left: 20px; background: url(../images/misc/socket_red.gif) no-repeat left center; }
-.socket-yellow       { padding-left: 20px; background: url(../images/misc/socket_yellow.gif) no-repeat left center; }
-.socket-blue         { padding-left: 20px; background: url(../images/misc/socket_blue.gif) no-repeat left center; }
-.socket-prismatic    { padding-left: 20px; background: url(../images/misc/socket-prismatic.gif) no-repeat left center; }
-.socket-cogwheel     { padding-left: 20px; background: url(../images/misc/socket-cogwheel.gif) no-repeat left center; }
-.socket-domination   { padding-left: 20px; background: url(../images/misc/socket-domination.gif) no-repeat left center; }
-.socket-hydraulic    { padding-left: 20px; background: url(../images/misc/socket-hydraulic.gif) no-repeat left center; }
-.socket-primordial   { padding-left: 20px; background: url(../images/misc/socket-primordial.gif) no-repeat left center; }
-.socket-tinker       { padding-left: 20px; background: url(../images/misc/socket-tinker.gif) no-repeat left center; }
-.socket-relic-iron   { padding-left: 20px; background: url(../images/misc/socket-relic-iron.png) no-repeat left center; }
-.socket-relic-blood  { padding-left: 20px; background: url(../images/misc/socket-relic-blood.png) no-repeat left center; }
-.socket-relic-shadow { padding-left: 20px; background: url(../images/misc/socket-relic-shadow.png) no-repeat left center; }
-.socket-relic-fel    { padding-left: 20px; background: url(../images/misc/socket-relic-fel.png) no-repeat left center; }
-.socket-relic-arcane { padding-left: 20px; background: url(../images/misc/socket-relic-arcane.png) no-repeat left center; }
-.socket-relic-frost  { padding-left: 20px; background: url(../images/misc/socket-relic-frost.png) no-repeat left center; }
-.socket-relic-fire   { padding-left: 20px; background: url(../images/misc/socket-relic-fire.png) no-repeat left center; }
-.socket-relic-water  { padding-left: 20px; background: url(../images/misc/socket-relic-water.png) no-repeat left center; }
-.socket-relic-life   { padding-left: 20px; background: url(../images/misc/socket-relic-life.png) no-repeat left center; }
-.socket-relic-storm  { padding-left: 20px; background: url(../images/misc/socket-relic-storm.png) no-repeat left center; }
-.socket-relic-holy   { padding-left: 20px; background: url(../images/misc/socket-relic-holy.png) no-repeat left center; }
+.socket-meta             { padding-left: 20px; background: url(../images/misc/socket_meta.gif) no-repeat left center; }
+.socket-red              { padding-left: 20px; background: url(../images/misc/socket_red.gif) no-repeat left center; }
+.socket-yellow           { padding-left: 20px; background: url(../images/misc/socket_yellow.gif) no-repeat left center; }
+.socket-blue             { padding-left: 20px; background: url(../images/misc/socket_blue.gif) no-repeat left center; }
+.socket-prismatic        { padding-left: 20px; background: url(../images/misc/socket-prismatic.gif) no-repeat left center; }
+.socket-cogwheel         { padding-left: 20px; background: url(../images/misc/socket-cogwheel.gif) no-repeat left center; }
+.socket-domination       { padding-left: 20px; background: url(../images/misc/socket-domination.gif) no-repeat left center; }
+.socket-hydraulic        { padding-left: 20px; background: url(../images/misc/socket-hydraulic.gif) no-repeat left center; }
+.socket-primordial       { padding-left: 20px; background: url(../images/misc/socket-primordial.gif) no-repeat left center; }
+.socket-tinker           { padding-left: 20px; background: url(../images/misc/socket-tinker.gif) no-repeat left center; }
+.socket-relic-iron       { padding-left: 20px; background: url(../images/misc/socket-relic-iron.png) no-repeat left center; }
+.socket-relic-blood      { padding-left: 20px; background: url(../images/misc/socket-relic-blood.png) no-repeat left center; }
+.socket-relic-shadow     { padding-left: 20px; background: url(../images/misc/socket-relic-shadow.png) no-repeat left center; }
+.socket-relic-fel        { padding-left: 20px; background: url(../images/misc/socket-relic-fel.png) no-repeat left center; }
+.socket-relic-arcane     { padding-left: 20px; background: url(../images/misc/socket-relic-arcane.png) no-repeat left center; }
+.socket-relic-frost      { padding-left: 20px; background: url(../images/misc/socket-relic-frost.png) no-repeat left center; }
+.socket-relic-fire       { padding-left: 20px; background: url(../images/misc/socket-relic-fire.png) no-repeat left center; }
+.socket-relic-water      { padding-left: 20px; background: url(../images/misc/socket-relic-water.png) no-repeat left center; }
+.socket-relic-life       { padding-left: 20px; background: url(../images/misc/socket-relic-life.png) no-repeat left center; }
+.socket-relic-storm      { padding-left: 20px; background: url(../images/misc/socket-relic-storm.png) no-repeat left center; }
+.socket-relic-holy       { padding-left: 20px; background: url(../images/misc/socket-relic-holy.png) no-repeat left center; }
+.socket-red-punchcard    { padding-left: 20px; background: url(../images/misc/socket_red.gif) no-repeat left center; }
+.socket-yellow-punchcard { padding-left: 20px; background: url(../images/misc/socket_yellow.gif) no-repeat left center; }
+.socket-blue-punchcard   { padding-left: 20px; background: url(../images/misc/socket_blue.gif) no-repeat left center; }
 
 .moneygold {
     display: inline-block;
