Module/Tooltip: Better style tooltip

--- a/application/css/tooltip.css
+++ b/application/css/tooltip.css
@@ -9,6 +9,10 @@
     z-index: 9999999;
     padding:1rem;
 }
+#fusion_tooltip, .tooltip-container {
+    max-width:350px;
+    min-width: 200px;
+}
 #fusion_tooltip pp, .fusion_tooltip pp {
     position: absolute;
     left: -65px !important;
