Module/Sidebox_poll: Ability to display more than 1 poll in the sidebox. Close #94

--- a/application/css/default.css
+++ b/application/css/default.css
@@ -622,10 +622,10 @@ input[type="radio"] {
     font-weight: bold;
 }
 
-#poll_actions {
-    display: block;
-    text-align: center;
-    width: 90px;
+.poll_actions {
+    display: block !important;
+    text-align: center !important;
+    width: 90px !important;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5px;
