--- a/system/Debug/Toolbar/Views/toolbar.css
+++ b/system/Debug/Toolbar/Views/toolbar.css
@@ -66,6 +66,7 @@
   margin-right: 5px;
 }
 #debug-bar h2 {
+  font-weight: bold;
   font-size: 16px;
   margin: 0;
   padding: 5px 0 10px;
@@ -235,6 +236,8 @@
   color: #FFFFFF;
 }
 #debug-bar .tab {
+  height: fit-content;
+  text-align: left;
   bottom: 35px;
   display: none;
   left: 0;
@@ -251,6 +254,8 @@
   -webkit-box-shadow: 0 -1px 4px #DFDFDF;
 }
 #debug-bar .timeline {
+  position: static;
+  display: table;
   margin-left: 0;
   width: 100%;
 }
